# stella_gc

./: .gitmodules  CMakeLists.txt  run_tests.sh
.github/workflows/: ci.yaml
stella-runtime/: CMakeLists.txt  cmake_install.cmake
stella-runtime/include/stella/: gc.h
stella-runtime/src/: gc.c  runtime.c
test/custom_test/: exp-many-writes.st  factorial-in-place.st
